<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zetarapower.monitor.ui.fragment.MainFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.zetarapower.monitor.ui.fragment.InfoFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.zetarapower.monitor.ui.fragment.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>